fix color of result and align contact section

--- a/src/scss/_all.scss
+++ b/src/scss/_all.scss
@@ -172,6 +172,7 @@
   color: #FFFFFF;
 }
 
+
 .submit-btn--wrapper {
   width: 100%;
   margin: 0 auto;
@@ -191,4 +192,8 @@
   height: 0;
   opacity: 0.1;
   border: 1px solid #17151C;
+}
+
+#section4 {
+  background-color: white;
 }
