--- a/src/scss/_contacts.scss
+++ b/src/scss/_contacts.scss
@@ -226,3 +226,8 @@
   right: 5%;
   bottom: 15%;
 }
+
+.contact-section {
+  display: flex;
+  flex-direction: column;
+}
